--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
+
+/* button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 /* @media (prefers-color-scheme: light) {
   :root {
@@ -105,7 +103,6 @@ color: #545F7D;
 }
 .input1 {
    box-sizing: border-box;
-    /* position: absolute; */
     width: 310px;
     height: 50px;
     background: #FFFFFF;
@@ -113,6 +110,9 @@ color: #545F7D;
     border-radius: 5px;
     padding-left: 20px;
     margin-bottom: 25px;
+}
+.input1:focus {
+  outline: 2px solid blueviolet;
 }
 .buttonHome {
     box-sizing: border-box;
@@ -123,14 +123,21 @@ color: #545F7D;
     padding-left: 20px;
     margin-bottom: 25px;
     color: white;
-        border: 2px solid rgba(84, 95, 125, 0.15);
+   border: 2px solid rgba(84, 95, 125, 0.15);
+}
+.inputPass {
+  position: relative;
+}
+.showPass {
+  margin-left: -60px;
+  color: #39CDCC;
 }
 
 
 
 
 
-@media only screen and (min-width:546px) {
+@media only screen and (min-width:950px) {
   .homeDivs {
     width: 600px;
     height: 338px;
